[gd_scene load_steps=6 format=3 uid="uid://dpanjdyet5aek"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_ptixl"]
[ext_resource type="PackedScene" uid="uid://b2x8cshe3s6x" path="res://Scenes/line_edit_scene.tscn" id="2_inife"]
[ext_resource type="PackedScene" uid="uid://njt6tu5wyfua" path="res://Scenes/circle_scene.tscn" id="3_k3yix"]
[ext_resource type="Texture2D" uid="uid://q1pcdnliiy8g" path="res://CIRCLE.png" id="4_c84ua"]
[ext_resource type="PackedScene" uid="uid://c81fqqqt1r7k8" path="res://Scenes/LabelScene.tscn" id="4_fkcd3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ptixl")
LineEditScene = ExtResource("2_inife")
CircleScene = ExtResource("3_k3yix")
LabelScene = ExtResource("4_fkcd3")

[node name="StackedBars" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 198.0
offset_top = 274.0
offset_right = 238.0
offset_bottom = 314.0

[node name="Names" type="Control" parent="StackedBars"]
layout_mode = 1
anchors_preset = 0
offset_left = -180.0
offset_top = -76.0
offset_right = -180.0
offset_bottom = -76.0

[node name="BaseLabel" type="Label" parent="StackedBars/Names"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -13.0
offset_top = -46.0
offset_right = 62.0
offset_bottom = -20.0
text = "No Points"

[node name="Restart" type="Button" parent="StackedBars"]
layout_mode = 0
offset_left = -99.0
offset_top = 409.0
offset_right = 280.0
offset_bottom = 440.0
text = "I took the screenshot and would like to restart :)"

[node name="BackgroundCircle" type="TextureProgressBar" parent="StackedBars"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.25, 0.25)
value = 100.0
texture_progress = ExtResource("4_c84ua")

[node name="StackedLineEdits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_right = 600.0
offset_bottom = 185.0

[node name="PIECHART" type="Button" parent="StackedLineEdits"]
layout_mode = 0
offset_left = 142.0
offset_top = 683.0
offset_right = 436.0
offset_bottom = 714.0
text = "Finished! Present Me My PIE CHART!!!"

[node name="Label" type="Label" parent="StackedLineEdits"]
layout_mode = 0
offset_left = 17.0
offset_top = 656.0
offset_right = 582.0
offset_bottom = 682.0
text = "Information That you might need to know in case you fuck something up."

[node name="MainMenuStuff" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="MainMenuStuff"]
layout_mode = 0
offset_left = 19.0
offset_top = 14.0
offset_right = 578.0
offset_bottom = 45.0
placeholder_text = "Input the amount of \"Graduation Status Subject Areas\""

[node name="Continue" type="Button" parent="MainMenuStuff"]
layout_mode = 0
offset_left = 490.0
offset_top = 61.0
offset_right = 569.0
offset_bottom = 92.0
text = "Continue"

[node name="CheckBox" type="CheckBox" parent="MainMenuStuff"]
layout_mode = 0
offset_left = 24.0
offset_top = 56.0
offset_right = 150.0
offset_bottom = 87.0
text = "Show names"

[connection signal="pressed" from="StackedBars/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="StackedLineEdits/PIECHART" to="." method="_on_piechart_pressed"]
[connection signal="text_changed" from="MainMenuStuff/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="MainMenuStuff/Continue" to="." method="_on_continue_pressed"]
[connection signal="toggled" from="MainMenuStuff/CheckBox" to="." method="_on_check_box_toggled"]
